--- a/calendar.html
+++ b/calendar.html
@@ -2,7 +2,7 @@
 	<html>
 		<body>
 			<h1>Hello World</h1>
-			<p>How's Discord doing? =w=</p>
+			<p>Calendar page~</p>
 			<div class="header-area">
 				<nav class="site-header text-nowrap">
 					<ul>
