--- a/firstlink.html
+++ b/firstlink.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 	<html>
 		<body>
-			<h1>Hello World</h1>
 			<p>Calendar page~</p>
 			<div class="header-area">
 				<nav class="site-header text-nowrap">
 					<ul>
 						<li class="menu-item">
-							::marker
-							<a href="./calendar.html">
-								<i class="fas fa-calendar">
-									::before
-								</i>
-								Calendar
+							<a href="./index.html">
+								Home
 							</a>
 						</li>
 					</ul>
 				</nav>
+				<video src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" width="720" height="405" controls autoplay></video>
 			</div>
 		</body>
 	</html>
