--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
 				<nav class="site-header text-nowrap">
 					<ul>
 						<li class="menu-item">
-							::marker
-							<a href="./calendar.html">
-								<i class="fas fa-calendar">
-									::before
-								</i>
-								Calendar
+							<a href="./firstlink.html">
+								Special Secret link
 							</a>
 						</li>
 					</ul>
