--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 		<body>
-			<h1>Hello World</h1>
+			<h1>This is my planned site for RomaSaga</h1>
 			<p>How's Discord doing? =w=</p>
 			<div class="header-area">
 				<nav class="site-header text-nowrap">
