--- a/firstlink.html
+++ b/firstlink.html
@@ -12,7 +12,7 @@
 						</li>
 					</ul>
 				</nav>
-				<video src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" width="720" height="405" controls autoplay></video>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay></iframe>
 			</div>
 		</body>
 	</html>
