--- a/firstlink.html
+++ b/firstlink.html
@@ -12,7 +12,7 @@
 						</li>
 					</ul>
 				</nav>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" &autoplay=1 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</body>
 	</html>
