--- a/firstlink.html
+++ b/firstlink.html
@@ -12,7 +12,9 @@
 						</li>
 					</ul>
 				</nav>
-				<video href="./Rick_Astley_Never_Gonna_Give_You_Up.mp4" controls autoplay><video>
+				<video width="320" height="240" controls autoplay>
+					<source src="./Rick_Astley_Never_Gonna_Give_You_Up.mp4" type="video/mp4">
+				</video>
 			</div>
 		</body>
 	</html>
