--- a/firstlink.html
+++ b/firstlink.html
@@ -12,7 +12,7 @@
 						</li>
 					</ul>
 				</nav>
-				<video width="320" height="240" controls autoplay>
+				<video width="320" height="240" controls volume=50%>
 					<source src="./Rick_Astley_Never_Gonna_Give_You_Up.mp4" type="video/mp4">
 				</video>
 			</div>
