--- a/firstlink.html
+++ b/firstlink.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 		<body>
-			<p>Should I feel bad for this?</p>
+			<p>Should I feel bad for this? =w=</p>
 			<div class="header-area">
 				<nav class="site-header text-nowrap">
 					<ul>
@@ -12,7 +12,7 @@
 						</li>
 					</ul>
 				</nav>
-				<video width="320" height="240" controls volume=50%>
+				<video width="320" height="240" controls onloadstart="this.volume=0.5">
 					<source src="./Rick_Astley_Never_Gonna_Give_You_Up.mp4" type="video/mp4">
 				</video>
 			</div>
