--- a/firstlink.html
+++ b/firstlink.html
@@ -7,12 +7,12 @@
 					<ul>
 						<li class="menu-item">
 							<a href="./index.html">
-								Home
+								Home Page
 							</a>
 						</li>
 					</ul>
 				</nav>
-				<video width="320" height="240" controls onloadstart="this.volume=0.25">
+				<video width="320" height="240" controls onloadstart="this.volume=0.1">
 					<source src="./Rick_Astley_Never_Gonna_Give_You_Up.mp4" type="video/mp4">
 				</video>
 			</div>
